--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -14,24 +18,26 @@ jobs:
         uses: actions/checkout@v4
 
       # ---------- Preflight build (outside docker) ----------
-      - name: Setup Node + pnpm
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
+          node-version: 20
+          cache: pnpm
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
-      - name: Enable pnpm via corepack
+
+      - name: Verify pnpm
         run: |
-          corepack enable
-          corepack prepare pnpm@9.0.0 --activate
           pnpm -v
           node -v
-      - name: Install deps (no frozen lockfile)
+
+      - name: Install deps (no frozen)
         run: pnpm install --no-frozen-lockfile
-      - name: Preflight build (logs only, toleran)
+
+      - name: Preflight build (tolerant)
         id: preflight
         env:
           NEXT_TELEMETRY_DISABLED: "1"
@@ -43,7 +49,8 @@ jobs:
           set -o pipefail
           pnpm run build:ci 2>&1 | tee .next-build-log.txt
         continue-on-error: true
-      - name: Upload preflight build log (if failed)
+
+      - name: Upload preflight log (if failed)
         if: steps.preflight.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
@@ -53,13 +60,16 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Log in to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -68,6 +78,7 @@ jobs:
           tags: |
             type=raw,value=latest
             type=sha
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
