--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,11 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+# Batasi 1 build per cabang; kalau ada commit baru, batalkan yang lama
+concurrency:
+  group: docker-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   packages: write
@@ -12,55 +17,22 @@ permissions:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    env:
+      # Buat log buildx lebih jelas (opsional)
+      BUILDKIT_PROGRESS: plain
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # ---------- Preflight build (outside docker) ----------
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      # Install pnpm **global** (pasti ada di PATH)
-      - name: Install pnpm globally (fallback)
-        run: |
-          npm i -g pnpm@9
-          pnpm -v
-          node -v
-
-      - name: Install deps (no frozen)
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Preflight build (tolerant)
-        id: preflight
-        env:
-          NEXT_TELEMETRY_DISABLED: "1"
-          TSC_COMPILE_ON_ERROR: "1"
-          INTERFAZE_API_BASE: "https://api.interfaze.ai/v1"
-          INTERFAZE_API_KEY: "DUMMY_AT_BUILD"
-          WEB_FETCH_ENABLED: "true"
-        run: |
-          set -o pipefail
-          pnpm run build:ci 2>&1 | tee .next-build-log.txt
-        continue-on-error: true
-
-      - name: Upload preflight log (if failed)
-        if: steps.preflight.outcome == 'failure'
-        uses: actions/upload-artifact@v4
-        with:
-          name: preflight-build-log
-          path: .next-build-log.txt
-      # ---------- End preflight ----------
-
+      # Build multi-arch butuh QEMU; walau kita target amd64, ini aman & cepat
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -80,7 +52,9 @@ jobs:
         with:
           context: .
           push: true
+          # targetkan linux/amd64 biar kompatibel dengan runner Nosana
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
+          # cache antar-run supaya build berikutnya lebih cepat
           cache-from: type=gha
           cache-to: type=gha,mode=max
