--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "dev:ui": "next dev --turbo",
   "build:agent": "mastra build",
   "build:ui": "next build",
-  "start:agent": "AGENT_PORT=${AGENT_PORT:-4111} mastra start",
-  "start:ui": "PORT=${PORT:-8080} next start",
+  "start:agent": "PORT=4111 mastra start",
+  "start:ui": "PORT=8080 next start",
   "build": "mastra build && next build",
   "start": "concurrently \"npm:start:agent\" \"npm:start:ui\""
 }
